[package]
name = "codevis-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.13.0"
codevis = "0.8.4"
prodash = "20.0.0"
slint = "1.4.1"
syntect = "5.0.0"
anyhow = "1.0.79"
image = "0.24"
memmap2 = "0.5.7"
